--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Your Blog
-SEOTitle: 博客 | Your Blog
+title: Tim's Blog
+SEOTitle: Tim 的博客 | Tim's Blog
 header-img: img/post-bg-desk.jpg
 email: revanter@foxmail.com
 description: "Every failure is leading towards success."
-keyword: "一个博客"
+keyword: "Tim 的博客"
 url: "http://freewithyou.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/freewithyou/freewithyou.github.io.git" # you code repository
